--- a/index.html
+++ b/index.html
@@ -142,47 +142,63 @@
                     <!-- </div> -->
 
                 </div>
-                <div class="col-md-2">
-
-
-                    <nav class="navbar navbar-expand-lg">
-                        <a>
-                            <h4 class="navbar-brand home-button nav-text"> Home</h4>
-                        </a>
-                    </nav>
-
+                <div id="smallScreenMenu">
+                    <div class="dropdown">
+                        <button class="btn btn-secondary nav-text dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true"
+                            aria-expanded="false">
+                            Menu
+                        </button>
+                        <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
+                            <a class="dropdown-item nav-text" href="#">Home</a>
+                            <a class="dropdown-item nav-text" href="#">About</a>
+                            <a class="dropdown-item nav-text" href="#">Portfolio</a>
+                            <a class="dropdown-item nav-text" href="#">Contact</a>
+                        </div>
+                    </div>
                 </div>
-
-                <div class="col-md-2">
-
-                    <nav class="navbar navbar-expand-lg ">
-                        <a>
-                            <h4 class="navbar-brand nav-text about">About</h4>
-                        </a>
-                    </nav>
-
-                </div>
-
-                <div class="col-md-2">
+                <div id= "navBigScreen">
+                    <div class="col-md-2">
 
 
-                    <nav class="navbar navbar-expand-lg ">
-                        <a>
-                            <h4 class="navbar-brand ml-0 nav-text portfolio">Portfolio</h4>
-                        </a>
-                    </nav>
+                        <nav class="navbar navbar-expand-lg">
+                            <a>
+                                <h4 class="navbar-brand home-button nav-text"> Home</h4>
+                            </a>
+                        </nav>
 
-                </div>
+                    </div>
+
+                    <div class="col-md-2">
+
+                        <nav class="navbar navbar-expand-lg ">
+                            <a>
+                                <h4 class="navbar-brand nav-text about">About</h4>
+                            </a>
+                        </nav>
+
+                    </div>
+
+                    <div class="col-md-2">
+
+
+                        <nav class="navbar navbar-expand-lg ">
+                            <a>
+                                <h4 class="navbar-brand ml-0 nav-text portfolio">Portfolio</h4>
+                            </a>
+                        </nav>
+
+                    </div>
 
 
 
-                <div class="col-md-2">
+                    <div class="col-md-2">
 
 
-                    <nav class="navbar navbar-expand-lg">
-                        <h4 class="navbar-brand nav-text contact">Contact</h4>
-                    </nav>
+                        <nav class="navbar navbar-expand-lg">
+                            <h4 class="navbar-brand nav-text contact">Contact</h4>
+                        </nav>
 
+                    </div>
                 </div>
 
             </div>
@@ -231,7 +247,7 @@
                 <a href="https://bmccaw.github.io/Project_1/" target="blank">
                     <img class=" px-0 mx-auto" src="assets/images/planetarty-exploration.PNG" style="width:55%; height:350px"> </a>
                 <div class="w3-display-bottomleft pic-context w3-container w3-padding-16 w3-black">
-                   Planetary Exploration
+                    Planetary Exploration
                     <br> Git Hub Link:
                     <a href="https://github.com/bmccaw/Project_1" target="blank">https://github.com/bmccaw/Project_1</a>
                 </div>
@@ -249,9 +265,9 @@
             <div class="w3-display-container slides">
                 <a href="https://cheyra.github.io/TriviaGame/" target="blank">
                     <img class=" mx-auto" src="assets/images/Trivia-game.PNG" style="width:55%;  height:350px"> </a>
-                   
+
                 <div class="w3-display-bottomleft pic-context w3-container w3-padding-16 w3-black">
-                  
+
                     Iron Man Trivia Game
                     <br> Git Hub Link:
                     <a href="https://github.com/Cheyra/TriviaGame" target="blank">https://github.com/Cheyra/TriviaGame</a>
@@ -264,6 +280,15 @@
                     Train Schedule Tracker
                     <br> Git Hub Link:
                     <a href="https://github.com/Cheyra/Train" target="blank">https://github.com/Cheyra/Train</a>
+                </div>
+            </div>
+            <div class="w3-display-container slides" target="blank">
+                <a href="https://eat-da--burgers.herokuapp.com/">
+                    <img class=" mx-auto" src="assets/images/eatDaBurger.PNG" style="width:55%;  height:350px"> </a>
+                <div class="w3-display-bottomleft pic-context w3-container w3-padding-16 w3-black">
+                   Eat Da Burgers App
+                    <br> Git Hub Link:
+                    <a href="https://github.com/Cheyra/burger" target="blank">https://github.com/Cheyra/burger</a>
                 </div>
             </div>
 
