--- a/index.html
+++ b/index.html
@@ -284,6 +284,15 @@
                 </div>
             </div>
             <div class="w3-display-container slides" target="blank">
+                <a href="https://boiling-savannah-54771.herokuapp.com/">
+                    <img class=" mx-auto" src="assets/images/hikesite.PNG" style="width:55%;  height:350px"> </a>
+                <div class="w3-display-bottomleft pic-context w3-container w3-padding-16 w3-black">
+                    Take a hike
+                    <br> Git Hub Link:
+                    <a href="https://github.com/mycatbign/Project-2" target="blank">https://github.com/Cheyra/Train</a>
+                </div>
+            </div>
+            <div class="w3-display-container slides" target="blank">
                 <a href="https://eat-da--burgers.herokuapp.com/">
                     <img class=" mx-auto" src="assets/images/eatDaBurger.PNG" style="width:55%;  height:350px"> </a>
                 <div class="w3-display-bottomleft pic-context w3-container w3-padding-16 w3-black">
