--- a/index.html
+++ b/index.html
@@ -289,7 +289,7 @@
                 <div class="w3-display-bottomleft pic-context w3-container w3-padding-16 w3-black">
                     Take a hike
                     <br> Git Hub Link:
-                    <a href="https://github.com/mycatbign/Project-2" target="blank">https://github.com/Cheyra/Train</a>
+                    <a href="https://github.com/mycatbign/Project-2" target="blank">https://github.com/mycatbign/Project-2</a>
                 </div>
             </div>
             <div class="w3-display-container slides" target="blank">
