--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
             </div>
 
             <div class="col-md-3 px-1 sections text-center mx-auto portfolio ">
-                <span class="section-text portfolio">Portfolio</span>
+                <span id = "portfolio-button" class="section-text portfolio">Portfolio</span>
             </div>
 
             <div class="col-md-3 px-1 sections text-center mx-auto contact ">
@@ -244,6 +244,16 @@
     <div class="jumbotron portfolio-content mx-auto text-center mt-0">
         <h2 class="mx-auto mt-0 portfolio-header">Key Projects</h2>
         <div class="w3-content w3-display-container mx-auto px-0 text-center">
+            <div class="w3-display-container px-0 slides">
+                <a href="https://socialqs.herokuapp.com/" target="blank">
+                    <img class=" px-0 mx-auto" src="assets/images/Social-Qs.PNG" style="width:55%; height:350px"> </a>
+                <div class="w3-display-bottomleft pic-context w3-container w3-padding-16 w3-black">
+                    Social Qs
+                    <br> Git Hub Link:
+                    <a href="https://github.com/unh-dontoverreact/SocialQs" target="blank">https://github.com/bmccaw/Project_1</a>
+                </div>
+                <br>
+            </div>
             <div class="w3-display-container px-0 slides">
                 <a href="https://bmccaw.github.io/Project_1/" target="blank">
                     <img class=" px-0 mx-auto" src="assets/images/planetarty-exploration.PNG" style="width:55%; height:350px"> </a>
