--- a/index.html
+++ b/index.html
@@ -250,7 +250,7 @@
                 <div class="w3-display-bottomleft pic-context w3-container w3-padding-16 w3-black">
                     Social Qs
                     <br> Git Hub Link:
-                    <a href="https://github.com/unh-dontoverreact/SocialQs" target="blank">https://github.com/bmccaw/Project_1</a>
+                    <a href="https://github.com/unh-dontoverreact/SocialQs" target="blank">https://github.com/unh-dontoverreact/SocialQs</a>
                 </div>
                 <br>
             </div>
