--- a/index.html
+++ b/index.html
@@ -334,15 +334,10 @@
 
                         <div class="col-md-12">
                             <p>I find Web Development to be an enriching field which utilizes both critical thinking and creativity.
-                                My current expertise lay in front end web development however I am working towards full stack
-                                development through a coding boot camp offered through UNH.
+                                I have a diverse background which helped me grow and ultimately uncover this passion. 
                                 <br>
-                                <br> I have worked on various projects utilizing HTML, CSS, Java Script, Bootstrap, Ajax calls,
-                                Firebase, and Node.js.
                                 <br>
-                                <br> In this program I will learn how to use other coding languages to do backend web development
-                                such as Java and Python. I know Web Development is a constantly changing and evolving field
-                                and I am ready to grow as a developer by constantly immersing myself in code.
+                                I have a well rounded base knowledge of front and back end web development. I have experience with a broad array of applications including building front to back MERN applications. I am always seeking to grow and learn and look forward to continued learning in this ever changing field.
                                 <br>
                                 <br>
                                 <em id="bruce"> "The doubters said 'Man can not fly', The doers said, 'Maybe, but we'll try', And finally
